# TerminalGame

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  Game.cpp  Game.hpp  GameSettings.hpp  Main.cpp  SpaceInvader.cpp  SpaceInvader.hpp  System.cpp  System.hpp
App/Factory/: EntityFactory.cpp  EntityFactory.hpp  Factory.cpp  Factory.hpp  GameSettingsFactory.cpp  GameSettingsFactory.hpp  MenuFactory.cpp  MenuFactory.hpp
App/GameObjects/: Bar.cpp  Bar.hpp  Entity.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp
App/Layers/: GameLayer.cpp  GameLayer.hpp
App/SpaceInvader/: SpaceInvader.cpp  SpaceInvader.hpp  System.cpp  System.hpp  World.hpp
App/SpaceInvader/Entities/: Entity.hpp  Player.cpp  Player.hpp
App/SpaceInvader/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  LifecycleSystem.cpp  LifecycleSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp
App/Utils/: BulletUtils.hpp  GameSettings.hpp
Benchmark/: CMakeLists.txt  bulletBenchmark.cpp
Core/: CMakeLists.txt  Color.hpp  Drawable.hpp  Image.hpp  Point.hpp  ResourceManager.cpp  ResourceManager.hpp  Transformable.hpp  Window.cpp  Window.hpp
Core/Base/: Drawable.hpp  Transformable.hpp
Core/ECS/: Entity.hpp  System.cpp  System.hpp  World.cpp  World.hpp
Core/GUI/: OptionList.cpp  OptionList.hpp  ProgressBar.cpp  ProgressBar.hpp  Rectangle.cpp  Rectangle.hpp
Core/Graphic/: Image.hpp  Sprite.cpp  Sprite.hpp  Window.cpp  Window.hpp  WindowBuffer.cpp  WindowBuffer.hpp
Core/Layers/: Layer.hpp  LayerManager.cpp  LayerManager.hpp  MenuLayer.cpp  MenuLayer.hpp  PauseLayer.cpp  PauseLayer.hpp
Core/Loader/: BMP.cpp  BMP.hpp  BMPLoader.cpp  BMPLoader.hpp
Core/Sandbox/: BMPLoadSandbox.cpp  CMakeLists.txt  GuiSandbox.cpp  InputHandlerSandbox.cpp  InputSandbox.cpp  LayerSandbox.cpp  MoveSpriteSandbox.cpp  MoveWithoutInpurtSandbox.cpp  RectangleSandbox.cpp  ResourceManagerSandbox.cpp  WindowSandbox.cpp
Core/Utils/: Clock.cpp  Clock.hpp  Collision.cpp  Collision.hpp  Color.hpp  Input.hpp  InputHandler.cpp  InputHandler.hpp  RNG.cpp  RNG.hpp  Vec.hpp
docs/: Documentation.md
docs/Core/: ResourceManager.md
docs/Core/Base/: Drawable.md  Transformable.md
docs/Core/GUI/: OptionList.md  ProgressBar.md  Rectangle.md
docs/Core/Graphic/: Image.md  Sprite.md  Window.md  WindowBuffer.md
docs/Core/Layers/: Layer.md  LayerManager.md  MenuLayer.md
docs/Core/Loader/: BMP.md  BMPLoader.md
docs/Core/Utils/: Clock.md  Collision.md  Color.md  InputHandler.md  RNG.md  Vec.md
